# agentglue

./: .gitignore  AGENTS.md  BENCHMARK_PLAN.md  GO_TO_MARKET.md  NEXT_TODO.md  PLAN.md  PROGRESS.md  README.md  TEST_RESULT_2026-03-09.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/benchmarks/2026-03-09_partial_overlap_round/: SUMMARY.md  concurrent_probe.events.jsonl  partial_overlap_last_run.events.jsonl  repo_exploration_last_run.events.jsonl  result.json
artifacts/first_test_2026-03-09/: agentglue_events.jsonl  repo_exploration_first_test.json
benchmarks/: README.md  run_benchmark.py
benchmarks/tasks/: e2e.json  simple.json
examples/: basic_report.py
openclaw-agentglue/: .npmignore  README.md  openclaw.plugin.json  package.json
openclaw-agentglue/python/agentglue/: __init__.py  runtime.py
openclaw-agentglue/python/agentglue/core/: allocator.py  metrics.py
openclaw-agentglue/python/agentglue/middleware/: dedup.py  shared_memory.py  task_lock.py
openclaw-agentglue/sidecar/: server.py
openclaw-agentglue/src/: index.ts
scripts/: benchmark_repo_exploration.py  repo_exploration_first_test.py
src/agentglue/: __init__.py  runtime.py
src/agentglue/core/: events.py  recorder.py
tests/: test_smoke.py  test_sqlite_backend.py
tests/benchmark_fixture/src/coordination_demo/core/: allocator.py  replay.py
tests/benchmark_fixture/src/coordination_demo/eval/: runner.py
tests/benchmark_fixture/src/coordination_demo/policies/: shared_memory.py
